--- a/Sw/packages.config
+++ b/Sw/packages.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net40" />
-  <package id="Unity" version="5.8.6" targetFramework="net40" />
+  <package id="CodeStack.SwEx.AddIn" version="0.3.1" targetFramework="net461" />
+  <package id="CodeStack.SwEx.Common" version="0.9.0" targetFramework="net461" />
+  <package id="CodeStack.SwEx.MacroFeature" version="0.2.0-alpha" targetFramework="net461" />
+  <package id="CodeStack.SwEx.PMPage" version="0.4.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="Unity" version="5.8.11" targetFramework="net461" />
+  <package id="Xarial.Signal2Go" version="0.2.0" targetFramework="net461" />
+  <package id="Xarial.Signal2Go.Services.UserSettings" version="0.2.0" targetFramework="net461" />
+  <package id="Xarial.VPages.Framework" version="0.3.0" targetFramework="net461" />
 </packages>
