--- a/Sw/Sw.csproj
+++ b/Sw/Sw.csproj
@@ -120,7 +120,7 @@
       <HintPath>..\packages\Xarial.Signal2Go.Services.UserSettings.0.2.0\lib\net461\Xarial.Signal2Go.Services.UserSettings.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Xarial.VPages.Framework, Version=0.3.0.0, Culture=neutral, PublicKeyToken=6dcec729ca6a1943, processorArchitecture=MSIL">
+    <Reference Include="Xarial.VPages.Framework, Version=0.3.1.0, Culture=neutral, PublicKeyToken=null, processorArchitecture=MSIL">
       <HintPath>..\packages\Xarial.VPages.Framework.0.3.0\lib\net40\Xarial.VPages.Framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
