--- a/Tests/Sw.Tests/app.config
+++ b/Tests/Sw.Tests/app.config
@@ -10,6 +10,14 @@
         <assemblyIdentity name="SolidWorks.Interop.swconst" publicKeyToken="19f43e188e4269d8" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-26.2.0.63" newVersion="26.2.0.63" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="CodeStack.SwEx.Common" publicKeyToken="a46023996d4724e7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.9.0.0" newVersion="0.9.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
